--- a/codec/pom.xml
+++ b/codec/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.github.permadao</groupId>
+        <groupId>com.github.ringluck</groupId>
         <artifactId>arseedingsdk4j-parent</artifactId>
         <version>0.0.1</version>
     </parent>
@@ -14,7 +14,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.github.permadao</groupId>
+            <groupId>com.github.ringluck</groupId>
             <artifactId>arseedingsdk4j-util</artifactId>
             <version>${project.version}</version>
         </dependency>
