--- a/sdk/pom.xml
+++ b/sdk/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.github.ringluck</groupId>
+        <groupId>com.github.permadao</groupId>
         <artifactId>arseedingsdk4j-parent</artifactId>
-        <version>0.0.3</version>
+        <version>0.0.1</version>
     </parent>
 
     <artifactId>arseedingsdk4j-sdk</artifactId>
@@ -14,12 +14,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.github.ringluck</groupId>
+            <groupId>com.github.permadao</groupId>
             <artifactId>arseedingsdk4j-codec</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.github.ringluck</groupId>
+            <groupId>com.github.permadao</groupId>
             <artifactId>arseedingsdk4j-network</artifactId>
             <version>${project.version}</version>
         </dependency>
